IPEHR-131 add store method in queryService, add baseURL middleware, u… (#104)
* IPEHR-131 add store method in queryService, add baseURL middleware, update swagger information, add API tests for PUT stored query, add validate method in stored query

* IPEHR-131 remove baseURL middleware

* IPEHR-131 add baseURL, rename storeQuery method  to store
