# src/pkg/api/api.go
@@ -53,7 +53,7 @@ func New(cfg *config.Config, infra *infrastructure.Infra) *API {
 		Ehr:         NewEhrHandler(docService, cfg.BaseURL),
 		EhrStatus:   NewEhrStatusHandler(docService, cfg.BaseURL),
 		Composition: NewCompositionHandler(docService, groupAccessService, cfg.BaseURL),
-		Query:       NewQueryHandler(queryService),
+		Query:       NewQueryHandler(queryService, cfg.BaseURL),
 		//GroupAccess: NewGroupAccessHandler(docService, groupAccessService, cfg.BaseURL),
 		DocAccess: NewDocAccessHandler(docService),
 		Request:   NewRequestHandler(docService),
@@ -157,6 +157,7 @@ func (a *API) buildDefinitionAPI() handlerBuilder {
 
 		query := r.Group("query")
 		query.GET("/:qualifiedQueryName", a.Query.ListStored)
+		query.PUT("/:qualifiedQueryName", a.Query.Store)
 	}
 }
 
